Deleted unused assets and fixed about section microcopy

--- a/index.html
+++ b/index.html
@@ -156,9 +156,7 @@
                 <small class="text-orange-500">About our gym</small>
                 <h3 class="text-4xl uppercase font-bold">Safe Body Building</h3>
                 <p class="mt-4 text-lg leading-relaxed">
-                  The extension comes with three pre-built pages to help you get
-                  started faster. You can change the text and images and you're
-                  good to go.
+                  The best team and tools to lead you in your body transformation journey
                 </p>
                 <ul class="list-none mt-6">
                   <li class="py-2">
