Updated copyright info

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
         >
           <div class="w-full md:w-4/12 px-4 mx-auto text-center">
             <div class="text-sm text-gray-600 font-semibold py-1">
-              Copyright © 2022 The Power Room
+              Copyright © 2022 The Power Room by Kevin Noutsawo
             </div>
           </div>
         </div>
